--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,16 @@
         font-family: Poppins, sans-serif;
     }
 }
+
+@keyframes fadeIn {
+    from {
+      opacity: 0; 
+    }
+    to {
+      opacity: 65%; 
+    }
+  }
+  
+  .element {
+    animation: fadeIn 2s ease-in-out; 
+  }
